[gd_scene load_steps=3 format=3 uid="uid://c83apaj8xumpc"]

[ext_resource type="PackedScene" uid="uid://dihojvg2oqpkr" path="res://Scenes/UI/Card.tscn" id="1_jp6bf"]
[ext_resource type="Script" path="res://Scenes/UI/CardColorPicker.gd" id="1_n0dv6"]

[node name="CardColorPicker" type="Node2D"]
script = ExtResource("1_n0dv6")

[node name="Card" parent="." instance=ExtResource("1_jp6bf")]
offset_left = 392.0
offset_top = 168.0
offset_right = 532.0
offset_bottom = 368.0
bg_color = Color(1, 0, 0, 1)
fg_color = Color(0, 1, 0.933333, 1)

[node name="Card2" parent="." instance=ExtResource("1_jp6bf")]
offset_left = 208.0
offset_top = 168.0
offset_right = 348.0
offset_bottom = 368.0

[node name="Foreground" type="ColorPickerButton" parent="."]
offset_left = 632.0
offset_top = 24.0
offset_right = 832.0
offset_bottom = 88.0
color = Color(0, 1, 0.933333, 1)
edit_alpha = false

[node name="Background" type="ColorPickerButton" parent="."]
offset_left = 880.0
offset_top = 24.0
offset_right = 1080.0
offset_bottom = 88.0
color = Color(1, 0, 0, 1)
edit_alpha = false

[node name="Button" type="Button" parent="."]
offset_left = 296.0
offset_top = 32.0
offset_right = 432.0
offset_bottom = 72.0
text = "I like it"

[connection signal="color_changed" from="Foreground" to="." method="_on_foreground_color_changed"]
[connection signal="color_changed" from="Background" to="." method="_on_background_color_changed"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
